--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,8 @@
     "symfony/dotenv": "^4.2",
     "roave/security-advisories": "dev-master",
     "squizlabs/php_codesniffer": "^3.4"
+  },
+  "scripts": {
+    "post-create-project-cmd": "make setup"
   }
 }
